@@ -219,6 +219,8 @@ def _inherit_from(context, uri, calling_uri):
 
 def _lookup_template(context, uri, relativeto):
     lookup = context._with_template.lookup
+    if lookup is None:
+        raise exceptions.TemplateLookupException("Template '%s' has no TemplateLookup associated" % context._with_template.uri)
     uri = lookup.adjust_uri(uri, relativeto)
     try:
         return lookup.get_template(uri)
